<resources>
    <string name="app_name">The Counter</string>
    <string name="file_provider_authority" translatable="false">com.itechsoftsolutions.mtcore.fileprovider</string>
    <string name="intent_type_image" translatable="false">image/*</string>
    <string name="intent_extra_return_data" translatable="false">return-data</string>
    <string name="please_wait">Please Wait</string>
    <string name="loading">Loading…</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="session_expired">Session Expired</string>
    <string name="url_bidstore" translatable="false">http://bidstore.dev02.squaredbyte.com</string>
    <string name="url_help_and_support" translatable="false">https://support.mtcore.io/portal/home</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_item_found">No item found</string>
    <string name="tokenization_key" translatable="false">sandbox_x68cfm6c_y3yksnpgkmg5vw9x</string>
    <string name="api_base_url" translatable="false">https://api-mtcore.dev02.squaredbyte.com/api/</string>
    <string name="error_could_not_create_bitmap">Could not create bitmap from the view</string>
    <string name="error_dao_is_null">Dao is null</string>
    <string name="error_adapter_size_is_null">Adapter size is null</string>
    <string name="error_image_picking_intent_is_null">Image picking intent is null</string>
    <string name="error_fragment_context_is_null">Fragment context is null</string>
    <string name="error_selected_image_uri_is_null">Selected image uri is null</string>
    <string name="error_could_not_crop_image">Could not crop image</string>
    <string name="error_image_uri_is_null">Image Uri is null</string>
    <string name="error_internet_connection">Please check your internet connection</string>
    <string name="error_could_not_load_data">Could not load data. Please try again</string>
    <string name="error_something_went_wrong">Something went wrong</string>
    <string name="warning_permissions_are_required">Permissions are required</string>
    <string name="welcome_title">Welcome to</string>
    <string name="welcome_subtitle">The Secured, Shared MTCORE Wallet</string>
    <string name="registration_title">Sign Up</string>
    <string name="registration_first_name">First name</string>
    <string name="registration_last_name">Last name</string>
    <string name="registration_email">E-mail</string>
    <string name="registration_password">Password</string>
    <string name="registration_confirm_password">Confirm password</string>
    <string name="registration_sign_up">Sign Up</string>
    <string name="registration_already_have_an_account">Already have an account?</string>
    <string name="registration_login">Log in</string>
    <string name="registration_error_valid_fields">Please fill up all the fields</string>
    <string name="registration_error_valid_email">Please enter valid email</string>
    <string name="registration_error_valid_password">Password can not be less than 8 characters</string>
    <string name="registration_error_proper_password">Password must be consist of one uppercase, one lowercase and one
        number!
    </string>
    <string name="registration_error_not_same_password">Passwords don\'t match</string>
    <string name="registration_confirmation_of_registration">A confirmation email was sent to %s. Please go to your email and confirm the registration</string>
    <string name="registration_error_of_registration">Could not register. Try again please</string>
    <string name="registration_weak">Weak</string>
    <string name="registration_normal">Normal</string>
    <string name="registration_strong">Strong</string>
    <string name="login_title">Login</string>
    <string name="login_login">Log in</string>
    <string name="login_forgot_password">Forgot your password?</string>
    <string name="login_error_valid_fields">Please fill up all the fields</string>
    <string name="login_error_valid_email">Please enter valid email</string>
    <string name="login_error_valid_password">Password can not be less than 8 characters</string>
    <string name="login_error_proper_password">Password must be consist of one uppercase, one lowercase and one
        number!
    </string>
    <string name="login_error_login_failed">Could not login. Try again please</string>
    <string name="login_register_now">Sign up Now!</string>
    <string name="forgot_password_toolbar_title">Forgot Password</string>
    <string name="forgot_password_request">Request</string>
    <string name="forgot_password_error_valid_field">Please fill up the field</string>
    <string name="forgot_password_error_valid_email">Please enter valid email</string>
    <string name="forgot_password_error_of_process">Could not reset password. Try again please</string>
    <string name="code_verification_title">Code Verification</string>
    <string name="code_verification_subtitle">Enter the verification code which was sent to you</string>
    <string name="code_verification_verify">Verify</string>
    <string name="code_verification_error_invalid_token">The code you have entered is invalid</string>
    <string name="reset_password_title">Reset Password</string>
    <string name="reset_password_reset_password">Reset Password</string>
    <string name="reset_password_new_password">New Password</string>
    <string name="reset_password_confirm_password">Confirm Password</string>
    <string name="reset_password_error_could_not_reset">Could not reset password. Please try again</string>
    <string name="welcome_login">Log In</string>
    <string name="welcome_register">Sign up</string>
    <string name="dashboard_toolbar_title">Dashboard</string>
    <string name="dashboard_drawer_log_out">Log Out</string>
    <string name="dashboard_log_out_error_unsuccessful">Could not log out</string>
    <string name="dashboard_drawer_english" translatable="false">English</string>
    <string name="navigation_drawer_dashboard">Dashboard</string>
    <string name="navigation_drawer_my_wallets">My Wallets</string>
    <string name="navigation_drawer_my_referral">My Referral</string>
    <string name="navigation_drawer_ranking_list">Ranking List</string>
    <string name="navigation_drawer_my_rankings">My Rankings</string>
    <string name="navigation_drawer_software_licence">Software Licenses</string>
    <string name="navigation_drawer_go_to_bidstore">Bidstore</string>
    <string name="navigation_drawer_my_profile">My Profile</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="dashboard_available_mtr_balance">Available MTR Balance</string>
    <string name="dashboard_available_bids">Available bids</string>
    <string name="dashboard_available_points">Available points</string>
    <string name="dashboard_available_pending_withdrawals">Pending withdrawals</string>
    <string name="dashboard_error_could_not_load_data">Could not load dashboard data</string>
    <string name="dashboard_top_seller">Top Seller</string>
    <string name="dashboard_top_biderator">Top Biderator</string>
    <string name="dashboard_top_consumer">Top Consumer</string>
    <string name="dashboard_monthly">Monthly</string>
    <string name="dashboard_yearly">Yearly</string>
    <string name="dashboard_last_month_top_seller">Last month\'s top seller</string>
    <string name="dashboard_last_month_top_biderator">Last month\'s top biderator</string>
    <string name="dashboard_last_month_top_consumer">Last month\'s top consumer</string>
    <string name="dashboard_last_month_top_lucky">Last month\'s top lucky</string>
    <string name="dashboard_points">Points</string>
    <string name="dashboard_reward">Reward</string>
    <string name="dashboard_last_year_top_seller">Last year\'s top seller</string>
    <string name="dashboard_last_year_top_biderator">Last year\'s top biderator</string>
    <string name="dashboard_last_year_top_consumer">Last year\'s top consumer</string>
    <string name="dashboard_my_softwares">My softwares</string>
    <string name="dashboard_my_referral">My referral</string>
    <string name="dashboard_bids_status">Bids status</string>
    <string name="dashboard_mtr_status">MTR status</string>
    <string name="dashboard_bideration_status">Bideration status</string>
    <string name="dashboard_total_sold">Total sold</string>
    <string name="dashboard_total_biderated">Total biderated</string>
    <string name="dashboard_in_user_wallets">In user wallets</string>
    <string name="dashboard_total_safe">Total safe</string>
    <string name="dashboard_total_distributed">Total distributed</string>
    <string name="dashboard_total_bideration_blocks">Total bideration blocks</string>
    <string name="dashboard_total_distributed_mtr_per_day">Total distributed MTR per Day</string>
    <string name="dashboard_shark_club">Shark Club</string>
    <string name="dashboard_no_data_available">No data available</string>
    <string name="my_rankings_title">My rankings</string>
    <string name="my_rankings_seller">Seller</string>
    <string name="my_rankings_biderator">Biderator</string>
    <string name="my_rankings_consumer">Consumer</string>
    <string name="my_rankings_error_could_not_load_data">Could not load ranking data</string>
    <string name="my_rankings_seller_points_history">Seller points history</string>
    <string name="my_rankings_biderator_points_history">Biderator points history</string>
    <string name="my_rankings_consumer_points_history">Consumer points history</string>
    <string name="my_rankings_bids" translatable="false">Bids</string>
    <string name="ranking_list_title">Ranking list</string>
    <string name="ranking_list_top_sellers">Top sellers</string>
    <string name="ranking_list_top_consumers">Top consumers</string>
    <string name="ranking_list_top_biderators">Top biderators</string>
    <string name="ranking_list_id" translatable="false">%d\u00B0</string>
    <string name="ranking_list_points">%s points</string>
    <string name="ranking_list_name" translatable="false">%s %s</string>
    <string name="software_license_title">Software Licenses</string>
    <string name="software_license_software_license">Software license</string>
    <string name="software_license_purchase_history">Purchase history</string>
    <string name="software_license_software">Software</string>
    <string name="software_license_price">Price</string>
    <string name="software_license_status">Status</string>
    <string name="software_license_date">Date</string>
    <string name="software_license_price_yearly">Price: €%s/Yearly</string>
    <string name="software_license_speed">Speed: %s</string>
    <string name="software_license_ranking_points">Ranking points: %s</string>
    <string name="software_license_consumer_ranking_points">Consumer ranking points: %s</string>
    <string name="software_license_buy_now">Buy now</string>
    <string name="software_license_pending">Pending</string>
    <string name="software_license_active">Active</string>
    <string name="software_license_start_date">Starting date: %s</string>
    <string name="software_license_end_date">Ending date: %s</string>
    <string name="profile_id_upload">Upload</string>
    <string name="profile_id_upload_required_photos">Upload required photos</string>
    <string name="profile_id_front">Front</string>
    <string name="profile_id_back">Back</string>
    <string name="profile_nid">National ID</string>
    <string name="profile_passport">Passport</string>
    <string name="profile_utility_bill">Utility bill</string>
    <string name="profile_cancel">Cancel</string>
    <string name="profile_save_changes">Save changes</string>
    <string name="profile_first_name">First name</string>
    <string name="profile_last_name">Last name</string>
    <string name="profile_email">Email</string>
</resources>