<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.diaryofrifat.thecounter.main.ui.base.widget.CustomStatusBarView
            android:id="@+id/status_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/splash_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_title"
            android:text="@string/welcome_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/AppComponent.TextView.Title"
            app:layout_constraintTop_toBottomOf="@+id/status_bar" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_logo_with_text"
            app:layout_constraintBottom_toTopOf="@+id/text_view_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_title"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_subtitle"
            android:layout_width="@dimen/width_200"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_48"
            android:layout_marginBottom="@dimen/margin_48"
            android:gravity="center"
            android:text="@string/welcome_subtitle"
            android:textColor="@color/colorTextRegularSecondary"
            android:textSize="@dimen/text_small_body"
            app:fontFamily="@font/semi_bold"
            app:layout_constraintBottom_toTopOf="@+id/text_view_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_login"
            style="@style/AppButton.Common"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginEnd="@dimen/margin_32"
            android:text="@string/welcome_login"
            app:layout_constraintBottom_toTopOf="@+id/text_view_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_subtitle"
            app:layout_constraintVertical_bias="0.75"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_register"
            style="@style/AppButton.Accent"
            android:layout_marginStart="@dimen/margin_32"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_32"
            android:layout_marginBottom="@dimen/margin_16"
            android:text="@string/welcome_register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>