<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_16">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_nid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_dark_item_with_corners"
            android:drawableEnd="@drawable/ic_nid"
            android:drawablePadding="@dimen/padding_16"
            android:gravity="start|center_vertical"
            android:paddingStart="@dimen/padding_32"
            android:paddingTop="@dimen/padding_16"
            android:paddingEnd="@dimen/padding_32"
            android:paddingBottom="@dimen/padding_16"
            android:text="@string/profile_nid"
            android:textSize="@dimen/text_body"
            app:fontFamily="@font/bold"
            app:layout_constraintBottom_toTopOf="@+id/text_view_passport"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed"
            app:textAllCaps="true" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_passport"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_16"
            android:background="@drawable/rectangle_dark_item_with_corners"
            android:drawableEnd="@drawable/ic_passport"
            android:drawablePadding="@dimen/padding_16"
            android:gravity="start|center_vertical"
            android:paddingStart="@dimen/padding_32"
            android:paddingTop="@dimen/padding_16"
            android:paddingEnd="@dimen/padding_32"
            android:paddingBottom="@dimen/padding_16"
            android:text="@string/profile_passport"
            android:textSize="@dimen/text_body"
            app:fontFamily="@font/bold"
            app:layout_constraintBottom_toTopOf="@+id/text_view_utility_bill"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_nid"
            app:textAllCaps="true" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_utility_bill"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_dark_item_with_corners"
            android:drawableEnd="@drawable/ic_utility_bill"
            android:drawablePadding="@dimen/padding_16"
            android:gravity="start|center_vertical"
            android:paddingStart="@dimen/padding_32"
            android:paddingTop="@dimen/padding_16"
            android:paddingEnd="@dimen/padding_32"
            android:paddingBottom="@dimen/padding_16"
            android:text="@string/profile_utility_bill"
            android:textSize="@dimen/text_body"
            app:fontFamily="@font/bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_passport"
            app:textAllCaps="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>